make: Build size-optimized (-Os) image by default

--- a/Miniscope_DAQ/Makefile
+++ b/Miniscope_DAQ/Makefile
@@ -15,7 +15,11 @@
 ##
 
 ifeq ($(FX3FWROOT),)
-FX3FWROOT = ../../..
+	FX3FWROOT = ../../..
+endif
+
+ifeq ($(CYCONFOPT),)
+	CYCONFOPT=fx3_release
 endif
 
 all:compile
